@@ -1,0 +1,35 @@
+(import (rnrs)
+        (mosh queue)
+        (mosh test))
+
+(test-begin "queue")
+
+(let ([q (make-queue)])
+  (test-true (queue-empty? q))
+  (queue-push! q 1)
+  (test-false (queue-empty? q))
+  (test-eqv 1 (queue-pop! q))
+  (test-true (queue-empty? q)))
+
+(let ([q (make-queue)])
+  (test-true (queue-empty? q))
+  (queue-push! q 1)
+  (queue-push! q 2)
+  (test-false (queue-empty? q))
+  (test-eqv 1 (queue-pop! q))
+  (test-eqv 2 (queue-pop! q))
+  (test-true (queue-empty? q)))
+
+(let ([q (make-queue)])
+  (test-true (queue-empty? q))
+  (queue-push! q 1)
+  (queue-push! q 2)
+  (test-false (queue-empty? q))
+  (test-eqv 1 (queue-pop! q))
+  (queue-push! q 3)
+  (test-eqv 2 (queue-pop! q))
+  (test-eqv 3 (queue-pop! q))
+  (test-true (queue-empty? q))
+  (test-error (queue-pop! q)))
+
+(test-end)
